; ModuleID = '/home/carl/AnghaBench/seafile/lib/extr_utils.c_json_object_get_string_member.c'
source_filename = "/home/carl/AnghaBench/seafile/lib/extr_utils.c_json_object_get_string_member.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @json_object_get_string_member(i32* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32* @json_object_get(i32* %7, i8* %8)
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %16

13:                                               ; preds = %2
  %14 = load i32*, i32** %6, align 8
  %15 = call i8* @json_string_value(i32* %14)
  store i8* %15, i8** %3, align 8
  br label %16

16:                                               ; preds = %13, %12
  %17 = load i8*, i8** %3, align 8
  ret i8* %17
}

declare dso_local i32* @json_object_get(i32*, i8*) #1

declare dso_local i8* @json_string_value(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
